RESOLVED FIXED278743
REGRESSION(282339@main): [GTK] Broke a11y bus connection under flatpak
https://bugs.webkit.org/show_bug.cgi?id=278743
Summary REGRESSION(282339@main): [GTK] Broke a11y bus connection under flatpak
Michael Catanzaro
Reported 2024-08-27 14:22:43 PDT
When starting Epiphany Tech Preview, we print one warning for every tab: $ flatpak run org.gnome.Epiphany.Devel ** (process:2): WARNING **: 16:17:54.049: Can't connect to a11y bus: Could not connect: No such file or directory ** (process:2): WARNING **: 16:17:54.212: Can't connect to a11y bus: Could not connect: No such file or directory ** (process:2): WARNING **: 16:17:54.213: Can't connect to a11y bus: Could not connect: No such file or directory ... It must have broken recently, possibly 282339@main? Unfortunately the warning message does not print which file or directory it is failing to open, and I'm not finding it with strace, and the bug only occurs under flatpak. Developing under flatpak is onerous, so adding a simple printf to print the path would be quite inconvenient. (a11y was already broken under flatpak -- Georges is attempting to fix it in https://github.com/WebKit/WebKit/pull/32247 -- but failure to connect to the a11y bus is a new problem that will prevent fixing the original problem.)
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-27 14:25:46 PDT
Carlos Garcia Campos
Comment 2 2024-08-28 02:34:25 PDT
EWS
Comment 3 2024-08-29 04:31:08 PDT
Committed 282896@main (205f5b1570ee): <https://commits.webkit.org/282896@main> Reviewed commits have been landed. Closing PR #32815 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.