Cherry-pick 282896@main (205f5b1570ee). https://bugs.webkit.org/show_bug.cgi?id=278743

REGRESSION(282339@main): [GTK] Broke a11y bus connection under flatpak
    https://bugs.webkit.org/show_bug.cgi?id=278743

    Reviewed by Michael Catanzaro.

    Only use the sandboxed a11 bus address when using bubblewrap.

    * Source/WTF/wtf/glib/Sandbox.cpp:
    (WTF::shouldUseBubblewrap):
    * Source/WTF/wtf/glib/Sandbox.h:
    * Source/WebKit/UIProcess/Launcher/glib/ProcessLauncherGLib.cpp:
    (WebKit::ProcessLauncher::launchProcess):
    * Source/WebKit/UIProcess/glib/WebProcessPoolGLib.cpp:
    (WebKit::WebProcessPool::platformInitializeWebProcess):
    (WebKit::WebProcessPool::setSandboxEnabled):
    * Source/WebKit/UIProcess/glib/WebProcessProxyGLib.cpp:
    (WebKit::WebProcessProxy::platformGetLaunchOptions):

    Canonical link: https://commits.webkit.org/282896@main