Source/WebKit/UIProcess/Launcher/glib/ProcessLauncherGLib.cpp
@@ -224,7 +224,7 @@ void ProcessLauncher::launchProcess()
 #if ENABLE(BUBBLEWRAP_SANDBOX)
     // You cannot use bubblewrap within Flatpak or some containers so lets ensure it never happens.
     // Snap can allow it but has its own limitations that require workarounds.
-    else if (sandboxEnabled && !isInsideFlatpak() && !isInsideSnap() && !isInsideUnsupportedContainer())
+    else if (sandboxEnabled && shouldUseBubblewrap())
         process = bubblewrapSpawn(launcher.get(), m_launchOptions, argv, &error.outPtr());
 #endif // ENABLE(BUBBLEWRAP_SANDBOX)
     else
